// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectEnvironments render active renders empty message 1`] = `
.glamor-4 {
  font-size: 14px;
  box-shadow: inset 0 -1px 0;
  margin: -20px 0 30px;
}

.glamor-2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.glamor-0 {
  font-size: 20px;
  font-weight: bold;
  margin: 20px 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.glamor-19 {
  background: #fff;
  border: 1px solid;
  margin-bottom: NaNpx;
  position: relative;
}

.glamor-13 {
  border-bottom: 1px solid;
  border-radius: 0 0;
  text-transform: uppercase;
  font-size: 13px;
  line-height: 1;
  padding: 15px 20px;
}

.glamor-9 {
  font-size: inherit;
  text-transform: inherit;
  margin: 0;
}

.glamor-7 {
  font-size: 12px;
  font-weight: 600;
  text-transform: uppercase;
  margin-bottom: 20px;
  font-size: inherit;
  text-transform: inherit;
  margin: 0;
}

.glamor-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 18px;
  font-size: 1.5em;
  opacity: 0.4;
  font-weight: bold;
}

<ProjectEnvironments
  params={
    Object {
      "orgId": "org-slug",
      "projectId": "project-slug",
    }
  }
  route={
    Object {
      "path": "environments/",
    }
  }
>
  <div>
    <SettingsPageHeading
      tabs={
        <ul
          className="nav nav-tabs"
          style={
            Object {
              "borderBottom": "1px solid #ddd",
            }
          }
        >
          <ListLink
            activeClassName="active"
            index={true}
            to="/org-slug/project-slug/settings/environments/"
          >
            Environments
          </ListLink>
          <ListLink
            activeClassName="active"
            index={true}
            to="/org-slug/project-slug/settings/environments/hidden/"
          >
            Hidden
          </ListLink>
        </ul>
      }
      title="Manage Environments"
    >
      <Wrapper
        tabs={
          <ul
            className="nav nav-tabs"
            style={
              Object {
                "borderBottom": "1px solid #ddd",
              }
            }
          >
            <ListLink
              activeClassName="active"
              index={true}
              to="/org-slug/project-slug/settings/environments/"
            >
              Environments
            </ListLink>
            <ListLink
              activeClassName="active"
              index={true}
              to="/org-slug/project-slug/settings/environments/hidden/"
            >
              Hidden
            </ListLink>
          </ul>
        }
      >
        <div
          className="glamor-4 glamor-5"
        >
          <Flex
            align="center"
          >
            <Base
              align="center"
              className="glamor-2"
            >
              <div
                className="glamor-2"
                is={null}
              >
                <Title>
                  <div
                    className="glamor-0 glamor-1"
                  >
                    Manage Environments
                  </div>
                </Title>
              </div>
            </Base>
          </Flex>
          <div>
            <ul
              className="nav nav-tabs"
              style={
                Object {
                  "borderBottom": "1px solid #ddd",
                }
              }
            >
              <ListLink
                activeClassName="active"
                index={true}
                to="/org-slug/project-slug/settings/environments/"
              >
                <li
                  className=""
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Environments
                    </a>
                  </Link>
                </li>
              </ListLink>
              <ListLink
                activeClassName="active"
                index={true}
                to="/org-slug/project-slug/settings/environments/hidden/"
              >
                <li
                  className=""
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/hidden/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Hidden
                    </a>
                  </Link>
                </li>
              </ListLink>
            </ul>
          </div>
        </div>
      </Wrapper>
    </SettingsPageHeading>
    <Panel>
      <div
        className="glamor-19 glamor-20"
      >
        <PanelHeader>
          <StyledPanelHeader>
            <Component
              className="glamor-13 glamor-14"
            >
              <div
                className="glamor-13 glamor-14"
              >
                <StyledPanelHeading>
                  <Component
                    className="glamor-9 glamor-6"
                  >
                    <_default
                      className="glamor-9 glamor-6"
                    >
                      <div
                        className="glamor-6 glamor-7 glamor-8"
                      >
                        Active Environments
                      </div>
                    </_default>
                  </Component>
                </StyledPanelHeading>
              </div>
            </Component>
          </StyledPanelHeader>
        </PanelHeader>
        <PanelBody
          direction="column"
          disablePadding={true}
          flex={false}
        >
          <div
            className=""
          >
            <EmptyMessage>
              <div
                className="glamor-17 glamor-18"
              >
                You don't have any environments yet.
              </div>
            </EmptyMessage>
          </div>
        </PanelBody>
      </div>
    </Panel>
  </div>
</ProjectEnvironments>
`;

exports[`ProjectEnvironments render active renders environment list 1`] = `
.glamor-4 {
  font-size: 14px;
  box-shadow: inset 0 -1px 0;
  margin: -20px 0 30px;
}

.glamor-2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.glamor-0 {
  font-size: 20px;
  font-weight: bold;
  margin: 20px 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.glamor-25 {
  background: #fff;
  border: 1px solid;
  margin-bottom: NaNpx;
  position: relative;
}

.glamor-13 {
  border-bottom: 1px solid;
  border-radius: 0 0;
  text-transform: uppercase;
  font-size: 13px;
  line-height: 1;
  padding: 15px 20px;
}

.glamor-9 {
  font-size: inherit;
  text-transform: inherit;
  margin: 0;
}

.glamor-7 {
  font-size: 12px;
  font-weight: 600;
  text-transform: uppercase;
  margin-bottom: 20px;
  font-size: inherit;
  text-transform: inherit;
  margin: 0;
}

.glamor-17 {
  box-sizing: border-box;
  padding: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid;
}

.glamor-17:last-child {
  border: 0;
}

<ProjectEnvironments
  params={
    Object {
      "orgId": "org-slug",
      "projectId": "project-slug",
    }
  }
  route={
    Object {
      "path": "environments/",
    }
  }
>
  <div>
    <SettingsPageHeading
      tabs={
        <ul
          className="nav nav-tabs"
          style={
            Object {
              "borderBottom": "1px solid #ddd",
            }
          }
        >
          <ListLink
            activeClassName="active"
            index={true}
            to="/org-slug/project-slug/settings/environments/"
          >
            Environments
          </ListLink>
          <ListLink
            activeClassName="active"
            index={true}
            to="/org-slug/project-slug/settings/environments/hidden/"
          >
            Hidden
          </ListLink>
        </ul>
      }
      title="Manage Environments"
    >
      <Wrapper
        tabs={
          <ul
            className="nav nav-tabs"
            style={
              Object {
                "borderBottom": "1px solid #ddd",
              }
            }
          >
            <ListLink
              activeClassName="active"
              index={true}
              to="/org-slug/project-slug/settings/environments/"
            >
              Environments
            </ListLink>
            <ListLink
              activeClassName="active"
              index={true}
              to="/org-slug/project-slug/settings/environments/hidden/"
            >
              Hidden
            </ListLink>
          </ul>
        }
      >
        <div
          className="glamor-4 glamor-5"
        >
          <Flex
            align="center"
          >
            <Base
              align="center"
              className="glamor-2"
            >
              <div
                className="glamor-2"
                is={null}
              >
                <Title>
                  <div
                    className="glamor-0 glamor-1"
                  >
                    Manage Environments
                  </div>
                </Title>
              </div>
            </Base>
          </Flex>
          <div>
            <ul
              className="nav nav-tabs"
              style={
                Object {
                  "borderBottom": "1px solid #ddd",
                }
              }
            >
              <ListLink
                activeClassName="active"
                index={true}
                to="/org-slug/project-slug/settings/environments/"
              >
                <li
                  className=""
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Environments
                    </a>
                  </Link>
                </li>
              </ListLink>
              <ListLink
                activeClassName="active"
                index={true}
                to="/org-slug/project-slug/settings/environments/hidden/"
              >
                <li
                  className=""
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/hidden/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Hidden
                    </a>
                  </Link>
                </li>
              </ListLink>
            </ul>
          </div>
        </div>
      </Wrapper>
    </SettingsPageHeading>
    <Panel>
      <div
        className="glamor-25 glamor-26"
      >
        <PanelHeader>
          <StyledPanelHeader>
            <Component
              className="glamor-13 glamor-14"
            >
              <div
                className="glamor-13 glamor-14"
              >
                <StyledPanelHeading>
                  <Component
                    className="glamor-9 glamor-6"
                  >
                    <_default
                      className="glamor-9 glamor-6"
                    >
                      <div
                        className="glamor-6 glamor-7 glamor-8"
                      >
                        Active Environments
                      </div>
                    </_default>
                  </Component>
                </StyledPanelHeading>
              </div>
            </Component>
          </StyledPanelHeader>
        </PanelHeader>
        <PanelBody
          direction="column"
          disablePadding={true}
          flex={false}
        >
          <div
            className=""
          >
            <PanelItem
              key="1"
              p={2}
              style={
                Object {
                  "justifyContent": "space-between",
                }
              }
            >
              <StyledPanelItem
                p={2}
                style={
                  Object {
                    "justifyContent": "space-between",
                  }
                }
              >
                <Base
                  className="glamor-17 glamor-18"
                  p={2}
                  style={
                    Object {
                      "justifyContent": "space-between",
                    }
                  }
                >
                  <div
                    className="glamor-17 glamor-18"
                    is={null}
                    style={
                      Object {
                        "justifyContent": "space-between",
                      }
                    }
                  >
                    <span>
                      Production
                    </span>
                    <Button
                      disabled={false}
                      onClick={[Function]}
                      size="xsmall"
                    >
                      <button
                        className="button button-default button-xs"
                        disabled={false}
                        onClick={[Function]}
                        role="button"
                      >
                        <FlowLayout
                          truncate={false}
                        >
                          <div
                            className="flow-layout"
                          >
                            <span
                              className="button-label"
                            >
                              Hide
                            </span>
                          </div>
                        </FlowLayout>
                      </button>
                    </Button>
                  </div>
                </Base>
              </StyledPanelItem>
            </PanelItem>
            <PanelItem
              key="2"
              p={2}
              style={
                Object {
                  "justifyContent": "space-between",
                }
              }
            >
              <StyledPanelItem
                p={2}
                style={
                  Object {
                    "justifyContent": "space-between",
                  }
                }
              >
                <Base
                  className="glamor-17 glamor-18"
                  p={2}
                  style={
                    Object {
                      "justifyContent": "space-between",
                    }
                  }
                >
                  <div
                    className="glamor-17 glamor-18"
                    is={null}
                    style={
                      Object {
                        "justifyContent": "space-between",
                      }
                    }
                  >
                    <span>
                      Staging
                    </span>
                    <Button
                      disabled={false}
                      onClick={[Function]}
                      size="xsmall"
                    >
                      <button
                        className="button button-default button-xs"
                        disabled={false}
                        onClick={[Function]}
                        role="button"
                      >
                        <FlowLayout
                          truncate={false}
                        >
                          <div
                            className="flow-layout"
                          >
                            <span
                              className="button-label"
                            >
                              Hide
                            </span>
                          </div>
                        </FlowLayout>
                      </button>
                    </Button>
                  </div>
                </Base>
              </StyledPanelItem>
            </PanelItem>
          </div>
        </PanelBody>
      </div>
    </Panel>
  </div>
</ProjectEnvironments>
`;

exports[`ProjectEnvironments render hidden renders empty message 1`] = `
.glamor-4 {
  font-size: 14px;
  box-shadow: inset 0 -1px 0;
  margin: -20px 0 30px;
}

.glamor-2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.glamor-0 {
  font-size: 20px;
  font-weight: bold;
  margin: 20px 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.glamor-19 {
  background: #fff;
  border: 1px solid;
  margin-bottom: NaNpx;
  position: relative;
}

.glamor-13 {
  border-bottom: 1px solid;
  border-radius: 0 0;
  text-transform: uppercase;
  font-size: 13px;
  line-height: 1;
  padding: 15px 20px;
}

.glamor-9 {
  font-size: inherit;
  text-transform: inherit;
  margin: 0;
}

.glamor-7 {
  font-size: 12px;
  font-weight: 600;
  text-transform: uppercase;
  margin-bottom: 20px;
  font-size: inherit;
  text-transform: inherit;
  margin: 0;
}

.glamor-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 18px;
  font-size: 1.5em;
  opacity: 0.4;
  font-weight: bold;
}

<ProjectEnvironments
  params={
    Object {
      "orgId": "org-slug",
      "projectId": "project-slug",
    }
  }
  route={
    Object {
      "path": "environments/hidden/",
    }
  }
>
  <div>
    <SettingsPageHeading
      tabs={
        <ul
          className="nav nav-tabs"
          style={
            Object {
              "borderBottom": "1px solid #ddd",
            }
          }
        >
          <ListLink
            activeClassName="active"
            index={true}
            to="/org-slug/project-slug/settings/environments/"
          >
            Environments
          </ListLink>
          <ListLink
            activeClassName="active"
            index={true}
            to="/org-slug/project-slug/settings/environments/hidden/"
          >
            Hidden
          </ListLink>
        </ul>
      }
      title="Manage Environments"
    >
      <Wrapper
        tabs={
          <ul
            className="nav nav-tabs"
            style={
              Object {
                "borderBottom": "1px solid #ddd",
              }
            }
          >
            <ListLink
              activeClassName="active"
              index={true}
              to="/org-slug/project-slug/settings/environments/"
            >
              Environments
            </ListLink>
            <ListLink
              activeClassName="active"
              index={true}
              to="/org-slug/project-slug/settings/environments/hidden/"
            >
              Hidden
            </ListLink>
          </ul>
        }
      >
        <div
          className="glamor-4 glamor-5"
        >
          <Flex
            align="center"
          >
            <Base
              align="center"
              className="glamor-2"
            >
              <div
                className="glamor-2"
                is={null}
              >
                <Title>
                  <div
                    className="glamor-0 glamor-1"
                  >
                    Manage Environments
                  </div>
                </Title>
              </div>
            </Base>
          </Flex>
          <div>
            <ul
              className="nav nav-tabs"
              style={
                Object {
                  "borderBottom": "1px solid #ddd",
                }
              }
            >
              <ListLink
                activeClassName="active"
                index={true}
                to="/org-slug/project-slug/settings/environments/"
              >
                <li
                  className=""
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Environments
                    </a>
                  </Link>
                </li>
              </ListLink>
              <ListLink
                activeClassName="active"
                index={true}
                to="/org-slug/project-slug/settings/environments/hidden/"
              >
                <li
                  className=""
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/hidden/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Hidden
                    </a>
                  </Link>
                </li>
              </ListLink>
            </ul>
          </div>
        </div>
      </Wrapper>
    </SettingsPageHeading>
    <Panel>
      <div
        className="glamor-19 glamor-20"
      >
        <PanelHeader>
          <StyledPanelHeader>
            <Component
              className="glamor-13 glamor-14"
            >
              <div
                className="glamor-13 glamor-14"
              >
                <StyledPanelHeading>
                  <Component
                    className="glamor-9 glamor-6"
                  >
                    <_default
                      className="glamor-9 glamor-6"
                    >
                      <div
                        className="glamor-6 glamor-7 glamor-8"
                      >
                        Hidden
                      </div>
                    </_default>
                  </Component>
                </StyledPanelHeading>
              </div>
            </Component>
          </StyledPanelHeader>
        </PanelHeader>
        <PanelBody
          direction="column"
          disablePadding={true}
          flex={false}
        >
          <div
            className=""
          >
            <EmptyMessage>
              <div
                className="glamor-17 glamor-18"
              >
                You don't have any hidden environments.
              </div>
            </EmptyMessage>
          </div>
        </PanelBody>
      </div>
    </Panel>
  </div>
</ProjectEnvironments>
`;

exports[`ProjectEnvironments render hidden renders environment list 1`] = `
.glamor-4 {
  font-size: 14px;
  box-shadow: inset 0 -1px 0;
  margin: -20px 0 30px;
}

.glamor-2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.glamor-0 {
  font-size: 20px;
  font-weight: bold;
  margin: 20px 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.glamor-21 {
  background: #fff;
  border: 1px solid;
  margin-bottom: NaNpx;
  position: relative;
}

.glamor-13 {
  border-bottom: 1px solid;
  border-radius: 0 0;
  text-transform: uppercase;
  font-size: 13px;
  line-height: 1;
  padding: 15px 20px;
}

.glamor-9 {
  font-size: inherit;
  text-transform: inherit;
  margin: 0;
}

.glamor-7 {
  font-size: 12px;
  font-weight: 600;
  text-transform: uppercase;
  margin-bottom: 20px;
  font-size: inherit;
  text-transform: inherit;
  margin: 0;
}

.glamor-17 {
  box-sizing: border-box;
  padding: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid;
}

.glamor-17:last-child {
  border: 0;
}

<ProjectEnvironments
  params={
    Object {
      "orgId": "org-slug",
      "projectId": "project-slug",
    }
  }
  route={
    Object {
      "path": "environments/hidden/",
    }
  }
>
  <div>
    <SettingsPageHeading
      tabs={
        <ul
          className="nav nav-tabs"
          style={
            Object {
              "borderBottom": "1px solid #ddd",
            }
          }
        >
          <ListLink
            activeClassName="active"
            index={true}
            to="/org-slug/project-slug/settings/environments/"
          >
            Environments
          </ListLink>
          <ListLink
            activeClassName="active"
            index={true}
            to="/org-slug/project-slug/settings/environments/hidden/"
          >
            Hidden
          </ListLink>
        </ul>
      }
      title="Manage Environments"
    >
      <Wrapper
        tabs={
          <ul
            className="nav nav-tabs"
            style={
              Object {
                "borderBottom": "1px solid #ddd",
              }
            }
          >
            <ListLink
              activeClassName="active"
              index={true}
              to="/org-slug/project-slug/settings/environments/"
            >
              Environments
            </ListLink>
            <ListLink
              activeClassName="active"
              index={true}
              to="/org-slug/project-slug/settings/environments/hidden/"
            >
              Hidden
            </ListLink>
          </ul>
        }
      >
        <div
          className="glamor-4 glamor-5"
        >
          <Flex
            align="center"
          >
            <Base
              align="center"
              className="glamor-2"
            >
              <div
                className="glamor-2"
                is={null}
              >
                <Title>
                  <div
                    className="glamor-0 glamor-1"
                  >
                    Manage Environments
                  </div>
                </Title>
              </div>
            </Base>
          </Flex>
          <div>
            <ul
              className="nav nav-tabs"
              style={
                Object {
                  "borderBottom": "1px solid #ddd",
                }
              }
            >
              <ListLink
                activeClassName="active"
                index={true}
                to="/org-slug/project-slug/settings/environments/"
              >
                <li
                  className=""
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Environments
                    </a>
                  </Link>
                </li>
              </ListLink>
              <ListLink
                activeClassName="active"
                index={true}
                to="/org-slug/project-slug/settings/environments/hidden/"
              >
                <li
                  className=""
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/hidden/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Hidden
                    </a>
                  </Link>
                </li>
              </ListLink>
            </ul>
          </div>
        </div>
      </Wrapper>
    </SettingsPageHeading>
    <Panel>
      <div
        className="glamor-21 glamor-22"
      >
        <PanelHeader>
          <StyledPanelHeader>
            <Component
              className="glamor-13 glamor-14"
            >
              <div
                className="glamor-13 glamor-14"
              >
                <StyledPanelHeading>
                  <Component
                    className="glamor-9 glamor-6"
                  >
                    <_default
                      className="glamor-9 glamor-6"
                    >
                      <div
                        className="glamor-6 glamor-7 glamor-8"
                      >
                        Hidden
                      </div>
                    </_default>
                  </Component>
                </StyledPanelHeading>
              </div>
            </Component>
          </StyledPanelHeader>
        </PanelHeader>
        <PanelBody
          direction="column"
          disablePadding={true}
          flex={false}
        >
          <div
            className=""
          >
            <PanelItem
              key="1"
              p={2}
              style={
                Object {
                  "justifyContent": "space-between",
                }
              }
            >
              <StyledPanelItem
                p={2}
                style={
                  Object {
                    "justifyContent": "space-between",
                  }
                }
              >
                <Base
                  className="glamor-17 glamor-18"
                  p={2}
                  style={
                    Object {
                      "justifyContent": "space-between",
                    }
                  }
                >
                  <div
                    className="glamor-17 glamor-18"
                    is={null}
                    style={
                      Object {
                        "justifyContent": "space-between",
                      }
                    }
                  >
                    <span>
                      Zzz
                    </span>
                    <Button
                      disabled={false}
                      onClick={[Function]}
                      size="xsmall"
                    >
                      <button
                        className="button button-default button-xs"
                        disabled={false}
                        onClick={[Function]}
                        role="button"
                      >
                        <FlowLayout
                          truncate={false}
                        >
                          <div
                            className="flow-layout"
                          >
                            <span
                              className="button-label"
                            >
                              Show
                            </span>
                          </div>
                        </FlowLayout>
                      </button>
                    </Button>
                  </div>
                </Base>
              </StyledPanelItem>
            </PanelItem>
          </div>
        </PanelBody>
      </div>
    </Panel>
  </div>
</ProjectEnvironments>
`;
